--- a/bardot.html
+++ b/bardot.html
@@ -126,8 +126,10 @@
     <div class="block small-block block-in">
       <h4>SEARCH SUGGESTIONS</h4>
       <p>
-        Taking into account the scenarios and keywords customers likely to search for when shopping for clothes online,
+        Taking into account the scenarios and keywords customers likely to search for in an eCommerce fashion website,
         we decided to display the suggestions not only base on the keywords but were also subject to popularity/availability.
+        Product tiles/images were also placed intentionally as suggestions, because after all, images speak better than words (
+        particularly true in the fashion world).
       </p>
     </div>
   </div>
@@ -144,10 +146,10 @@
     <h4 class="block-in">MINI LOGIN - CART - WISHLIST</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Base on results and heatmaps from user research team, the majority of user interactions were within the top.
+        Base on results and heatmaps from user research, the majority of user interactions were within the top.
         Login, Wishlish and Bag were the most clicked.
-        We decluttered the old header by removing unnecessary items and designed a new streamlined one with only
-        mandatory items easily accessible.
+        We decluttered the old header by removing unnecessary items, separating those links from the main category menu
+        and designed a new streamlined navigation with mandatory items easily accessible.
       </p>
     </div>
 
@@ -162,7 +164,7 @@
     <h4 class="block-in">MEGA DROPDOWN MENU</h4>
     <div class="block no-margin-top block-in">
       <p>
-        We blew a new wind into the Dropdown navigation by integrating CTA banners (of trending items, promotions,
+        We blew a new wind into the dropdown menu by integrating CTA banners (of trending items, promotions,
         collections, etc.) that were relevant to each category. We made use of the header's real estate as much as possible for
         highlight contents.
       </p>
