--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -82,11 +82,12 @@
     </div>
       <div class="block">
         <p>
-          Ever had <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>
-          after <a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4">googling your symptoms?</a> <br />
-          The App uses AI to accurately assess your symptom(s) and provide possible causes, then allows you to book appointments
-          with a relevant physician for official diagnosis and treatments. Then, it helps keeping track of those
-          symptoms, as well as your medication.
+          <span><a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4">Googling your symptoms</a></span> might not be a good idea.
+          This app will ease the <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>
+          with its smart algorithm to assess your inputs and provide possible causes rationally. Once done, it then allows you
+          to quickly book appointments with relevant physicians and track those symptoms together with their treatments/medication.
+          <br />
+          In short, it is NOT just another symptom checker. 
         </p>
       </div>
   </div>
