--- a/credits.html
+++ b/credits.html
@@ -81,10 +81,13 @@
 
   <a href="https://greensock.com/gsap">GSAP</a>
   <a href="https://jquery.com/">jQuery</a>
-  <a href="http://manos.malihu.gr/page-scroll-to-id/">Malihu's PageScroll2id</a>
+  <a href="http://manos.malihu.gr/page-scroll-to-id/">PageScroll2id</a>
   <a href="https://animejs.com/">Anime.js</a>
   <a href="https://github.com/customd/jquery-visible">jQuery Visible plugin</a>
   <a href="https://codepen.io/Codewoofy/pen/VeBJEP">Follow Mouse Cursor</a>
+  <a href="https://github.com/marp-team/marpit-svg-polyfill">Marpit - solving inline SVG foreignObject problems on Safari & iOS</a>
+  <a href="http://iamdustan.com/smoothscroll/">Smooth scrolling behavior polyfill</a>
+  <a href="https://jonaskuske.github.io/smoothscroll-anchor-polyfill/">Smoothscroll anchor</a>
 
 
   <!-- <div id="thanks">
