minor wording updates

--- a/about.html
+++ b/about.html
@@ -66,15 +66,14 @@
       <strong>The Profession:</strong> I am working as a UX/UI designer with a background in Multimedia Systems.
       My ambition is to work on innovative products with great values. I am very enthusiastic (too much at times)
       when it comes to problem solving and making things work.
-      I believe that good designs look nice, while great designs make sense, and Art is a whole different story (yes, I'm also
-      a fan of Art and I know the difference).
-       <br />
+      I believe in the subtle difference between a good design and a great one.
+      <br />
       <br />
       <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road.
     </p>
 
     <p>
-      <small>I enjoy keeping a low profile, if you'd like to contact me, please feel free to write me some words @
+      <small>I enjoy keeping a low profile, if you would like to contact me, please feel free to write me some words @
         <a href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">nhuthoangdon@gmail.com</a>
       </small>
     </p>
