--- a/bardot.html
+++ b/bardot.html
@@ -127,9 +127,9 @@
       <h4>SEARCH SUGGESTIONS</h4>
       <p>
         Taking into account the scenarios and keywords customers likely to search for in an eCommerce fashion website,
-        we decided to display the suggestions not only base on the keywords but were also subject to popularity/availability.
-        Product tiles/images were also placed intentionally as suggestions, because after all, images speak better than words (
-        particularly true in the fashion world).
+        we decided to display the suggestions not only base on the keywords but were also subjected to popularity/availability.
+        Product tiles/images were also placed intentionally as suggestions, because images speak better than words
+        (particularly true in the fashion world).
       </p>
     </div>
   </div>
