--- a/cv.html
+++ b/cv.html
@@ -39,14 +39,14 @@
     <svg id="cv-icon" width="144px" height="97px" viewBox="0 0 144 97" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g id="Desktop-HD" transform="translate(-1058.000000, -396.000000)" fill-rule="nonzero">
-                <path d="M1090.5,490.5 L1169.5,490.5 L1169.5,404 C1169.5,400.410149 1166.58985,397.5 1163,397.5 L1097,397.5 C1093.41015,397.5 1090.5,400.410149 1090.5,404 L1090.5,490.5 Z" id="Rectangle-1" stroke="#a107f9" stroke-width="3"></path>
-                <path d="M1146.5,399.523233 L1146.5,413 C1146.5,416.589851 1149.41015,419.5 1153,419.5 L1167.27584,419.5 L1146.5,399.523233 Z" id="Rectangle-2" stroke="#a107f9" stroke-width="3"></path>
-                <path d="M1059.5,491 L1200.49023,491" id="Line-4" stroke="#a107f9" stroke-width="3" stroke-linecap="round"></path>
-                <circle id="cv-Oval-1" stroke="#f90760" stroke-width="3" cx="1119" cy="418" r="7"></circle>
-                <path d="M1134,447 C1134,438.715729 1127.28427,432 1119,432 C1110.71573,432 1104,438.715729 1104,447" id="cv-Oval-2" stroke="#F66C38" stroke-width="3"></path>
-                <path d="M1102.63333,458 L1158.71797,458" id="Line-1" stroke="#4B4747" stroke-width="2" stroke-linecap="square"></path>
-                <path d="M1102.63333,468 L1158.71797,468" id="Line-2" stroke="#4B4747" stroke-width="2" stroke-linecap="square"></path>
-                <path d="M1135,478 L1158.73668,478" id="Line-3" stroke="#4B4747" stroke-width="2" stroke-linecap="square"></path>
+                <path d="M1090.5,490.5 L1169.5,490.5 L1169.5,404 C1169.5,400.410149 1166.58985,397.5 1163,397.5 L1097,397.5 C1093.41015,397.5 1090.5,400.410149 1090.5,404 L1090.5,490.5 Z" id="Rectangle-1" stroke="#c1ccdb" stroke-width="3"></path>
+                <path d="M1146.5,399.523233 L1146.5,413 C1146.5,416.589851 1149.41015,419.5 1153,419.5 L1167.27584,419.5 L1146.5,399.523233 Z" id="Rectangle-2" stroke="#c1ccdb" stroke-width="3"></path>
+                <path d="M1059.5,491 L1200.49023,491" id="Line-4" stroke="#c1ccdb" stroke-width="3" stroke-linecap="round"></path>
+                <circle id="cv-Oval-1" stroke="#c1ccdb" stroke-width="3" cx="1119" cy="418" r="7"></circle>
+                <path d="M1134,447 C1134,438.715729 1127.28427,432 1119,432 C1110.71573,432 1104,438.715729 1104,447" id="cv-Oval-2" stroke="#c1ccdb" stroke-width="3"></path>
+                <path d="M1102.63333,458 L1158.71797,458" id="Line-1" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
+                <path d="M1102.63333,468 L1158.71797,468" id="Line-2" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
+                <path d="M1135,478 L1158.73668,478" id="Line-3" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
             </g>
         </g>
     </svg>
@@ -98,7 +98,7 @@
         <li><p>Experience working with cross-functional teams & various stakeholders</p></li>
         <li><p>Team-leading & mentoring experience</p></li>
         <li><p>Work well independently and/or in a team </p></li>
-        <li><p>Highly familiar with international working environment</p></li>
+        <li><p>Highly familiar with international working environments</p></li>
         <li><p>Strong problem-solving abilities & resilience</p></li>
         <li><p>Quick adaptability & high flexibility</p></li>
         <li><p>Eagerness to learn and willingness to get out of comfort zone</p></li>
@@ -112,7 +112,7 @@
         <li><p>and relevant Software: Adobe Photoshop/Illustrator</p></li>
         <li><p>Abilities to use other Multimedia Software (i.e. Audition, InDesign, Premiere, 3Ds Max)</p></li>
         <li><p>Strong foundation to quickly pick up new tools</p></li>
-        <li><p>Knowledge of HTML5/CSS3/JS and some libraries (learning since 09-2018)</p></li>
+        <li><p>Knowledge of HTML5/CSS3/JS and some libraries (learning since 10-2018)</p></li>
         <li><p>Experience designing for multiple platforms (responsive websites, mobile apps & other devices)</p></li>
         <li><p>Familiar with Confluence & Jira</p></li>
         <li><p>Multimedia background (knowledge of visual/interaction design, photography, animations,
@@ -175,9 +175,10 @@
           <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
           <ul>
             <li>Produced wireframes, mockups, prototypes for Web/App Products</li>
+            <li>Promoted UX/UI solutions</li>
             <li>Created UI specs, styleguides, assets for product development</li>
             <li>Gathered insights from user research team & stakeholders to create/amend designs accordingly</li>
-            <li>Promoted UX/UI solutions</li>
+            <li>Designed interfaces for unpopular devices (e.g. petroleum refill app, apps for POS devices)</li>
             <li>Liaised & collaborated with international stakeholders & teams</li>
             <li>Managed local design team & mentored interns</li>
             <li>Created visual-related materials (e.g. decks, banners, promotions)</li>
@@ -213,19 +214,19 @@
   <h3>Contact Information</h3>
   <div class="blocks">
     <div class="block">
-      <h4>Email</h4>
+      <h5>Email</h5>
       <p>
         <a href="mailto:nhuthoangdon@gmail.com">nhuthoangdon@gmail.com</a>
       </p>
 
-      <h4>Mobile</h4>
+      <h5>Mobile</h5>
       <p>
         +84-93-401-3398
       </p>
     </div>
 
     <div class="block">
-      <h4>Website/Portfolio</h4>
+      <h5>Website / Portfolio</h5>
       <p>
         <a href="https://nhuthoangdon.github.io">nhuthoangdon.github.io</a>
       </p>
