--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <section class="flex-column" id="contact-me">
   <h1 style="text-align:center;" class="contact-in-out">Contact</h1>
   <p class="centered-text contact-in-out">
-    Social Media isn't my cup of tea.<br />
+    Social Media isn't my cup of coffee.<br />
     If you'd like to find me, <br />
     <a id="home-mailto" target="_blank"
     href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">drop me a line</a> and we will see.
