--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -85,9 +85,8 @@
           <span><a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4">Googling your symptoms</a></span> might not be a good idea.
           This app will ease the <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>
           with its smart algorithm to assess your inputs and provide possible causes rationally. Once done, it then allows you
-          to quickly book appointments with relevant physicians and track those symptoms together with their treatments/medication.
-          <br />
-          In short, it is NOT just another symptom checker. 
+          to quickly book appointments with relevant physicians and track those symptoms altogether with their treatments/medication.
+          In short, it is NOT just another symptom checker.
         </p>
       </div>
   </div>
