--- a/cv.html
+++ b/cv.html
@@ -158,7 +158,7 @@
           <h6>UX/UI Intern</h6>
           <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
           <ul>
-            <li>Optimised/edited images & assets for web/app development</li>
+            <li>Optimised/edited images & assets for web/app&nbsp;development</li>
             <li>Assisted in visual-related tasks</li>
             <li>Designed company's Intranet</li>
           </ul>
@@ -171,18 +171,19 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>UX/UI Designer <br /> (Junior - Senior/Local Teamlead)</h6>
+          <h6>UX/UI Designer <br /> (Junior - Senior/Local&nbsp;Teamlead)</h6>
           <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
           <ul>
-            <li>Produced wireframes, mockups, prototypes for Web/App Products</li>
-            <li>Promoted UX/UI solutions</li>
-            <li>Created UI specs, styleguides, assets for product development</li>
-            <li>Gathered insights from user research team & stakeholders to create/amend designs accordingly</li>
-            <li>Designed interfaces for unpopular devices (e.g. petroleum refill app, apps for POS devices)</li>
-            <li>Liaised & collaborated with international stakeholders & teams</li>
-            <li>Managed local design team & mentored interns</li>
-            <li>Created visual-related materials (e.g. decks, banners, promotions)</li>
-            <li>Designed company's new office (floor plan, 3D design, interior)</li>
+            <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;Products</li>
+            <li>Promoted UX/UI&nbsp;solutions</li>
+            <li>Created UI specs, styleguides, assets for product&nbsp;development</li>
+            <li>Gathered insights from user research team & stakeholders to create/amend designs&nbsp;accordingly</li>
+            <li>Designed interfaces for unpopular devices (e.g. petroleum refill app, apps for POS&nbsp;devices)</li>
+            <li>Liaised & collaborated with international stakeholders &&nbsp;teams</li>
+            <li>Led local design team & mentored&nbsp;interns</li>
+            <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
+            <li>Created visual-related materials (e.g. decks, banners,&nbsp;promotions)</li>
+            <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
         </div>
       </div>
@@ -195,9 +196,9 @@
         <div>
           <h6>Freelancer</h6>
           <ul>
-            <li>Working on self's projects</li>
+            <li>Working on self's&nbsp;projects</li>
             <li>Learning Frontend</li>
-            <li>Freelancing as a UX/UI designer</li>
+            <li>Freelancing as a UX/UI&nbsp;designer</li>
           </ul>
         </div>
       </div>
