--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
       <strong>The Profession:</strong> I am working as a UX/UI designer with a background in Multimedia Systems.
       My ambition is to work on innovative products with great values. I am very enthusiastic (too much at times)
       when it comes to problem solving and making things work.
-      I believe in the subtle difference between a good design and a great one.
+      In my work, I strive for the subtle difference between a good design and a great one.
       <br />
       <br />
       <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road.
