finalised finalised finalised

--- a/bardot.html
+++ b/bardot.html
@@ -96,8 +96,8 @@
       <p>
         As a dedicated eCommerce website,
         the project required many micro interactions, functionalities and heavy mobile optimisation.
-        We had to keep in mind all aspects during the design process, from design principles to user testings, to meeting project
-        timeframe and budget, so on and so forth.
+        We had to keep in mind all aspects during the design process, with the most challenging part being keeping the
+        design elements (principles, user research, etc.) aligned with the project milestones and budget.
       </p>
     </div>
   </div>
