cleaned up unused files

--- a/works.html
+++ b/works.html
@@ -102,6 +102,7 @@
 
 
 <section class="other-works">
+
   <h2 class="block-in">Others</h2>
   <h5><small>Graphic/Conceptual Artwork/Animations</small></h5>
 
@@ -132,14 +133,19 @@
         Sorry it's a really nice video your browser failed to load.
       </video>
 
+      <video controls class="block-in">
+        <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+
       <img alt="poster" src="./Assets/poster.png" class="block-in"/>
     </div>
 
     <div class="other-work-tile">
       <div class="other-work-tile">
         <img alt="Nabulio Logo" id="nabulio" class="block-in" src="./Assets/nabulio.png" />
-
         <img alt="" src="./Assets/Nabulio-Mockup.jpg" class="block-in"/>
+        <img alt="" src="./Assets/cdCover-2.png" class="block-in"/>
       </div>
     </div>
 
