--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <h2 class="centered-text intro2-in-out">
         I do UXs/UIs, <br />
-        with a focus on Product Design.
+        and love to work on Product Design.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
