--- a/bardot.html
+++ b/bardot.html
@@ -97,7 +97,8 @@
         As a dedicated eCommerce website,
         the project required many micro interactions, functionalities and heavy mobile optimisation.
         We had to keep in mind all aspects during the design process, with the most challenging part being keeping the
-        design elements (principles, user research, etc.) aligned with the project milestones and budget.
+        design elements (principles, product functionalities, client's requirements, etc.)
+        aligned with the project milestones and budget.
       </p>
     </div>
   </div>
