fixed marpit polyfill unable to load from cdn

--- a/about.html
+++ b/about.html
@@ -4362,7 +4362,10 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@2/umd/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@marp-team/marpit-svg-polyfill@1/lib/polyfill.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@marp-team/marpit-svg-polyfill/lib/polyfill.browser.js"></script>
+<script src="./Scripts/package/lib/polyfill.browser.js"></script>
+<script src="./Scripts/package/lib/polyfill.js"></script>
 <script src="./Scripts/TweenMax.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 <script src="./Scripts/jquery.gsap.min.js"></script>
