--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 
 
     <h2 class="centered-text intro2-in-out">
-        I do UXs/UIs, <br />
-        and love to work on Product Design.
+        I do UX/UI, <br />
+        focusing on Product Design.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
-        - Check out some of my works below -
+        - I believe in ideas and things that make sense -
         </i>
     </p>
 
