--- a/works.html
+++ b/works.html
@@ -104,7 +104,7 @@
 <section class="other-works">
 
   <h2 class="block-in">Others</h2>
-  <h5><small>Graphic/Conceptual Artwork/Animations</small></h5>
+  <h5 class="block-in"><small>Graphic/Conceptual Artwork/Animations</small></h5>
 
   <div class="other-works-tiles">
     <div class="other-work-tile">
