--- a/cv.html
+++ b/cv.html
@@ -197,7 +197,7 @@
           <h6>Freelancer</h6>
           <ul>
             <li>Working on self's&nbsp;projects</li>
-            <li>Learning Frontend</li>
+            <li>Learning Frontend Web Development</li>
             <li>Freelancing as a UX/UI&nbsp;designer</li>
           </ul>
         </div>
