--- a/cv.html
+++ b/cv.html
@@ -171,7 +171,7 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>UX/UI Designer <br /> (Junior - Senior/Local&nbsp;Teamlead)</h6>
+          <h6>UX/UI Designer <br /> (Junior - Senior - Local&nbsp;Teamlead)</h6>
           <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
           <ul>
             <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;Products</li>
@@ -182,6 +182,7 @@
             <li>Liaised & collaborated with international stakeholders &&nbsp;teams</li>
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
+            <li>Occational onsite work in Sydney for client meetings, trainings, and colleague collaborations</li>
             <li>Created visual-related materials (e.g. decks, banners,&nbsp;promotions)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
