--- a/cv.html
+++ b/cv.html
@@ -182,7 +182,7 @@
             <li>Liaised & collaborated with international stakeholders &&nbsp;teams</li>
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
-            <li>Occational onsite work in Sydney for client meetings, trainings, and colleague collaborations</li>
+            <li>Occasional onsite work in Sydney for client meetings, trainings, and colleague collaborations</li>
             <li>Created visual-related materials (e.g. decks, banners,&nbsp;promotions)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
