--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <section class="flex-row" id="home-intro">
 
 
-  <h1 id="intro_text">Yo, <br /> welcome! </h1>
+  <h1 id="intro_text">Howdy, <br /> welcome! </h1>
 
 
     <!-- CTA arrow for next page -->
