minor word changes

--- a/cv.html
+++ b/cv.html
@@ -124,8 +124,8 @@
       <h4>The Languages</h4>
       <ul>
         <li><p>English - Full Professional</p></li>
-        <li><p>Spanish - Limited Working (learning at B2 level)</p></li>
-        <li><p>German - Elementary (learning)</p></li>
+        <li><p>Spanish - Limited Working (learning B2)</p></li>
+        <li><p>German - Elementary (learning A1)</p></li>
       </ul>
     </div>
 
@@ -182,7 +182,7 @@
             <li>Liaised & collaborated with international stakeholders &&nbsp;teams</li>
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
-            <li>Occasional onsite work in Sydney for client meetings, trainings, and colleague collaborations</li>
+            <li>Occasional onsite work in Sydney for client meetings, trainings, and collaborations</li>
             <li>Created visual-related materials (e.g. decks, banners,&nbsp;promotions)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
