--- a/cv.html
+++ b/cv.html
@@ -156,9 +156,9 @@
       <div class="achievemnents">
         <div>
           <h6>UX/UI Intern</h6>
-          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
+          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | Saigon, VN</small></p>
           <ul>
-            <li>Optimised/edited images & assets for web/app&nbsp;development</li>
+            <li>Optimised/prepared images & assets for web/app&nbsp;development</li>
             <li>Assisted in visual-related tasks</li>
             <li>Designed company's Intranet</li>
           </ul>
@@ -172,7 +172,7 @@
       <div class="achievemnents">
         <div>
           <h6>UX/UI Designer <br /> (Junior - Senior - Local&nbsp;Teamlead)</h6>
-          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | VN Office</small></p>
+          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | Saigon, VN</small></p>
           <ul>
             <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;Products</li>
             <li>Promoted UX/UI&nbsp;solutions</li>
@@ -183,7 +183,7 @@
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
             <li>Occasional onsite work in Sydney for client meetings, trainings, and collaborations</li>
-            <li>Created visual-related materials (e.g. decks, banners,&nbsp;promotions)</li>
+            <li>Created visual-related materials (e.g. pitch decks, banners,&nbsp;promotions)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
         </div>
@@ -198,7 +198,7 @@
           <h6>Freelancer</h6>
           <ul>
             <li>Working on self's&nbsp;projects</li>
-            <li>Learning Frontend Web Development</li>
+            <li>Learning Frontend Web Development (HTML/CSS/JS)</li>
             <li>Freelancing as a UX/UI&nbsp;designer</li>
           </ul>
         </div>
